Fixed a bug where I minified already minified js files for jquery and bootstrap

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -54,7 +54,7 @@
 	  	</div>
 
 	  	{% block javascripts %}
-	  		{% javascripts filter='?jsqueeze'
+	  		{% javascripts
 		  		'//code.jquery.com/jquery-3.2.1.min.js'
 		  		'//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'
 		  		'//code.jquery.com/ui/1.12.1/jquery-ui.js' %}
